fixed arrow position bug on Firefox

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -103,7 +103,6 @@ img, .image {
   }
 
   .arrows-button {
-    @include my-flex($direction: column, $wrap: no-wrap);
     width: 100%;
     height: 100%;
     //transition-duration: 0.8s;
